src/test/ui/consts/async-block.without_feature.stderr
error[E0658]: `async` blocks are not allowed in constants
  --> $DIR/async-block.rs:12:47
   |
LL | const _: i32 = { core::mem::ManuallyDrop::new(async { 0 }); 4 };
   |                                               ^^^^^^^^^^^
   |
   = help: add `#![feature(const_async_blocks)]` to the crate attributes to enable

error[E0658]: `async` blocks are not allowed in statics
  --> $DIR/async-block.rs:15:51
   |
LL | static _FUT: &(dyn Future<Output = ()> + Sync) = &async {};
   |                                                   ^^^^^^^^
   |
   = help: add `#![feature(const_async_blocks)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
